Large refactor into java 25 and removing files that shouldnt javadocs are auto copied during build dont need to live in the repo